--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <label for="psswrd">Contraseña: </label>
         <input type="password" name="psswrd" id="psswrd" autocomplete="current-password">
         <br>
-        <!-- <label for="race">Raza: </label>
-        <input list="race" name="race"/></label>
+        <label for="race">Raza: </label>
+        <input list="race" name="race" id="race1"/></label>
         <datalist id="race">
         <option value="Humano">
         <option value="Elfo">
         <option value="Enano">
         <option value="Hobbit">
         </datalist>
-        <br> -->
+        <br>
         <button type="submit" id="boton">Enviar</button>
     </form>
     <script src="script.js"></script>
